# request_request

./: .gitattributes  .gitignore  AGENTS.md  BUILD.gn  CODEOWNERS  Cargo.toml  OAT.xml  README.md  README_ZH.md  bundle.json  hisysevent.yaml  request_aafwk.gni
common/utils/: BUILD.gn  Cargo.toml
common/utils/include/: request_utils_application.h  request_utils_network.h  request_utils_wrapper.h
common/utils/src/: applicationlib.rs  context.rs  fastrand.rs  file_control.rs  hilog.rs  lib.rs  lru.rs  macros.rs  request_hilog.rs  storage.rs  task_id.rs  wrapper.rs
download/ability/: BUILD.gn
download/ability/include/: common_event.h  download_data_ability.h  file_utils.h  sql_analyzer.h
download/ability/src/: common_event.cpp  db_path.cpp  download_data_ability.cpp  download_database.cpp  file_utils.cpp  predicates_convert.cpp  sql_analyzer.cpp  uri_utils.cpp
download/dfx/: BUILD.gn
download/dfx/dump/: dump_service_impl.cpp  dump_service_impl.h  dump_task_info.cpp  dump_task_info.h  dumper_factory.h  i_dumper.h  task_info_dumper_factory.cpp  task_info_dumper_factory.h
download/services/: BUILD.gn
download/services/include/: download_background_notification.h  download_notify_proxy.h  download_service_ability.h  download_service_manager.h  download_service_stub.h  download_service_task.h  download_thread.h  network_adapter.h  network_listener.h
download/services/src/: application_state_observer.cpp  download_background_notification.cpp  download_notify_proxy.cpp  download_service_ability.cpp  download_service_manager.cpp  download_service_stub.cpp  download_service_task.cpp  download_thread.cpp  net_conn_callback_observer.cpp  network_adapter.cpp  network_listener.cpp
frameworks/ets/ani/: BUILD.gn  Cargo.toml
frameworks/js/napi/: BUILD.gn
frameworks/native/: BUILD.gn  libdownload_single.map
frameworks/native/cache_core/: BUILD.gn  Cargo.toml
frameworks/native/cache_download/: BUILD.gn  Cargo.toml
frameworks/native/download/: BUILD.gn  downloadsingle.map
frameworks/native/include/: download_server_ipc_interface_code.h  i_notify_data_listener.h  i_response_listener.h  i_response_message_handler.h  notify_interface.h  parcel_helper.h  request.h  request_manager.h  request_manager_impl.h  request_running_task_count.h  request_service_interface.h  request_service_proxy.h  request_sync_load_callback.h  response_message_receiver.h  runcount_notify_stub.h
frameworks/native/request/: BUILD.gn  libdownload_single.map
frameworks/native/request_action/: BUILD.gn
frameworks/native/request_next/: BUILD.gn  Cargo.toml
frameworks/native/src/: parcel_helper.cpp  request.cpp  request_manager.cpp  request_manager_impl.cpp  request_running_task_count.cpp  request_service_proxy.cpp  request_sync_load_callback.cpp  response_message_receiver.cpp  runcount_notify_stub.cpp
frameworks/native/upload/: BUILD.gn  libupload_lib.map
pre_download/native/: BUILD.gn  Cargo.toml
pre_download/native/benches/: agent.rs
pre_download/native/include/: pre_download.h  pre_download_callback.h
pre_download/native/src/: agent.rs  error.rs  lib.rs  wrapper.rs
preload/native/: BUILD.gn  Cargo.toml
preload/native/benches/: agent.rs
preload/native/include/: preload_callback.h
preload/native/src/: agent.rs  lib.rs  test.rs  utils.rs  wrapper.rs
services/: BUILD.gn  Cargo.toml  libdownload_language_transfer.map
services/c_wrapper/include/: application_state_observer.h  c_check_permission.h  c_enumration.h  c_filter.h  c_form_item.h  c_progress.h  c_request_database.h  c_task_config.h  c_task_info.h  get_calling_bundle.h  network_adapter.h  request_cert_mgr_adapter.h  runcount_observer.h
services/c_wrapper/source/: application_state_observer.cpp  c_check_permission.cpp  c_event_handler.cpp  c_request_database.cpp  common_event_notify.cpp  network_adapter.cpp  request_cert_mgr_adapter.cpp
services/dfx/: BUILD.gn
services/dfx/dump/: dump_service_impl.h  dump_task_info.cpp  dump_task_info.h
services/etc/init/: downloadservice.cfg  downloadservice.rc
services/examples/: run_count.rs
services/include/: account.h  application_state_observer.h  background_notification.h  c_enumration.h  c_request_database.h  c_task_config.h  c_task_info.h  common_event_notify.h  get_proxy.h  log.h  network.h  network_adapter.h  notification_bar.h  request_cert_mgr_adapter.h  request_utils.h
services/sa_profile/: 3706.json  3706.xml
services/service/: BUILD.gn  libdownload_server.map
services/service/ability/: BUILD.gn  config.json
services/service/download_server/: BUILD.gn  Cargo.toml
services/service/include/: application_state_observer.h  download_background_notification.h  download_notify_proxy.h  download_service_ability.h  download_service_manager.h  download_service_stub.h  download_service_task.h  download_thread.h  network_adapter.h
services/service/request/: BUILD.gn  Cargo.toml
services/service/rust/: BUILD.gn
services/service/src/: download_service_ability.cpp  download_service_manager.cpp  download_service_stub.cpp  download_service_task.cpp  download_thread.cpp  enumration.rs  form_item.rs  network_adapter.cpp  progress.rs  request_task.rs  task_config.rs  task_manager.rs  utils.rs
services/src/: ability.rs  database.rs  error.rs  hilog.rs  init.rs  interface.rs  lib.rs  macros.rs  sys_event.rs  trace.rs
services/src/cxx/: account.cpp  application_state_observer.cpp  background_notification.cpp  bundle.cpp  c_request_database.cpp  c_string_wrapper.cpp  c_task_config.cpp  c_task_info.cpp  common_event_notify.cpp  download_language_transfer.cpp  get_proxy.cpp  network.cpp  network_adapter.cpp  notification_bar.cpp  request_cert_mgr_adapter.cpp  request_utils.cpp
services/src/database/: db_monitor.rs  mod.rs
services/src/manage/: account.rs  app_state.rs  cert_manager.rs  database.rs  keeper.rs  limit.rs  mod.rs  monitor.rs  network.rs  network_manager.rs  notifier.rs  qos.rs  query.rs  (+4 more)
services/tests/: BUILD.gn  basic.rs  construct.rs  entry.rs  resume.rs  search.rs  start.rs
test/rustest/: BUILD.gn  Cargo.toml
upload/unitest/: BUILD.gn
(+1238 files in other folders)
