# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "download_server"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = ["oh"]

oh = []

[dependencies]
ylong_runtime = { git = "https://gitee.com/openharmony/commonlibrary_rust_ylong_runtime", features = ["full"] }
ylong_http_client = { git = "https://gitee.com/openharmony/commonlibrary_rust_ylong_http", features = [
    "async",
    "c_openssl_3_0",
    "http1_1",
    "ylong_base",
] }

hilog_rust = { git = "https://gitee.com/openharmony/hiviewdfx_hilog" }
hisysevent = { git = "https://gitee.com/openharmony/hiviewdfx_hisysevent" }
hitrace_meter_rust = { git = "https://gitee.com/openharmony/hiviewdfx_hitrace" }
cxx = "1.0.115"

system_ability_fwk = { git = "https://gitee.com/openharmony/systemabilitymgr_safwk" }
samgr = { git = "https://gitee.com/openharmony/systemabilitymgr_samgr" }
ipc = { git = "https://gitee.com/openharmony/communication_ipc" }
