# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("//build/ohos.gni")

## Build download_dataability.hap
ohos_hap("download_dataability") {
  hap_profile = "./config.json"
  shared_libraries = [ ":downloaddataability" ]
  certificate_profile = "./signature/profile.p7b"
  hap_name = "download_dataability"
  part_name = "request"
  subsystem_name = "miscservices"
  module_install_dir = "app/com.ohos.download"
}

## Build downloaddataability.so {{{
config("downloaddataability_public_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "//third_party/node/src",
    "include",
  ]
  cflags = []
}

ohos_shared_library("downloaddataability") {
  sources = [
    "src/common_event.cpp",
    "src/db_path.cpp",
    "src/download_data_ability.cpp",
    "src/download_database.cpp",
    "src/file_utils.cpp",
    "src/predicates_convert.cpp",
    "src/sql_analyzer.cpp",
    "src/uri_utils.cpp",
  ]
  include_dirs = [
    "//utils/native/base/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//third_party/jsoncpp",
    "//third_party/jsoncpp/include/json",
    "//base/account/os_account/interfaces/innerkits/ohosaccount/native/include/",
    "//base/account/os_account/interfaces/kits/napi/distributedaccount/include/",
    "//base/account/os_account/interfaces/innerkits/include",
    "//foundation/aafwk/standard/interfaces/innerkits/want/include",
    "//foundation/appexecfwk/standard/kits/appkit/native/app",
    "//foundation/aafwk/standard/interfaces/innerkits/want/include/ohos/aafwk/content",
    "//foundation/aafwk/standard/interfaces/innerkits/ability_manager/include",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler/include",
    "//foundation/aafwk/standard/services/abilitymgr/include",
    "//foundation/appexecfwk/standard/common/log/include",
    "//foundation/aafwk/standard/frameworks/kits/ability/native/include",
    "//base/notification/common_event_service/interfaces/innerkits/native/include/",
    "//base/miscservices/request/download/utils/include",
    "//foundation/aafwk/standard/interfaces/innerkits/uri/include",
  ]

  deps = [
    "//base/notification/common_event_service/frameworks/core:cesfwk_core",
    "//base/notification/common_event_service/frameworks/native:cesfwk_innerkits",
    "//base/notification/common_event_service/services:cesfwk_services",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:dummy_classes",
    "//foundation/aafwk/standard/interfaces/innerkits/uri:zuri",
    "//foundation/aafwk/standard/interfaces/innerkits/want/:want",
    "//foundation/ace/napi:ace_napi",
    "//foundation/appexecfwk/standard/common:libappexecfwk_common",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core:appexecfwk_core",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
    "//utils/native/base:utilsbase",
  ]

  public_configs = [ ":downloaddataability_public_config" ]
  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "ipc:ipc_core",
    "native_appdatamgr:native_appdatafwk",
    "native_appdatamgr:native_dataability",
    "native_appdatamgr:native_preferences",
    "native_appdatamgr:native_rdb",
  ]
  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  public_deps = []
  relative_install_dir = "module"
  part_name = "request"
  subsystem_name = "miscservices"
}
## Build downloaddataability.so }}}
