# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("download_service_config") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]

  cflags_cc = [ "-fexceptions" ]
}

ohos_shared_library("download_server") {
  sources = [
    "//base/miscservices/request/download/interfaces/kits/js/napi/download_single/src/download_config.cpp",
    "//base/miscservices/request/download/interfaces/kits/js/napi/download_single/src/download_info.cpp",
    "src/download_notify_proxy.cpp",
    "src/download_service_ability.cpp",
    "src/download_service_manager.cpp",
    "src/download_service_stub.cpp",
    "src/download_service_task.cpp",
    "src/download_thread.cpp",
    "src/net_conn_callback_observer.cpp",
  ]

  public_configs = [
    "//utils/native/base:utils_config",
    ":download_service_config",
  ]
  include_dirs = [
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "//base/miscservices/request/download/interfaces/innerkits/include",
    "//base/miscservices/request/download/utils/include",
    "//third_party/json/include",
    "//base/miscservices/request/download/interfaces/kits/js/napi/download_single/include",
    "//third_party/curl/include",
    "//foundation/aafwk/standard/interfaces/innerkits/uri/include",
  ]
  deps = [
    "//base/telephony/core_service/interfaces/innerkits:tel_core_service_api",
    "//foundation/aafwk/standard/interfaces/innerkits/uri:zuri",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/communication/netmanager_base/interfaces/innerkits/netconnclient:net_conn_manager_if",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//third_party/curl:curl",
    "//utils/native/base:utils",
  ]

  defines = [ "NO_SSL_CERTIFICATION=1" ]

  external_deps = [
    "ability_base:zuri",
    "access_token:libaccesstoken_sdk",
    "bundle_framework:appexecfwk_core",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "multimedia_image_standard:image_native",
    "os_account_standard:os_account_innerkits",
    "ril_adapter:hril_innerkits",
  ]
  subsystem_name = "miscservices"
  part_name = "request"
}
