# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("download_service_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "//third_party/curl/include",
    "//third_party/openssl/include",
  ]

  ldflags = [ "-Wl,--exclude-libs,libcrypto_static.a" ]
  ldflags += [ "-Wl,--exclude-libs,libcurl.a" ]

  cflags_cc = [ "-fexceptions" ]
  cflags = [ "-DOPENSSL_ARM64_PLATFORM" ]
}

ohos_shared_library("download_server") {
  sources = [
    "//base/request/request/download/interfaces/kits/js/napi/download_single/src/download_config.cpp",
    "//base/request/request/download/interfaces/kits/js/napi/download_single/src/download_info.cpp",
    "//base/request/request/upload/frameworks/libs/src/module_init.cpp",
    "src/download_background_notification.cpp",
    "src/download_notify_proxy.cpp",
    "src/download_service_ability.cpp",
    "src/download_service_manager.cpp",
    "src/download_service_stub.cpp",
    "src/download_service_task.cpp",
    "src/download_thread.cpp",
    "src/network_adapter.cpp",
  ]

  public_configs = [
    "//commonlibrary/c_utils/base:utils_config",
    ":download_service_config",
  ]
  include_dirs = [
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "//foundation/communication/netmanager_base/interfaces/innerkits/netconnclient/include",
    "//base/notification/distributed_notification_service/interfaces/inner_api",
    "//base/request/request/download/interfaces/innerkits/include",
    "//base/request/request/download/utils/include",
    "//base/telephony/core_service/interfaces/innerkits/include",
    "//third_party/json/include",
    "//base/request/request/download/interfaces/kits/js/napi/download_single/include",
    "//base/request/request/upload/frameworks/libs/include",
    "//third_party/curl/include",
    "//third_party/openssl/include",
    "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent/include",
    "//base/hiviewdfx/hitrace/interfaces/native/innerkits/include/hitrace_meter",
    "//base/request/request/download/dfx/dump",
    "//base/request/request/download/dfx/event/statistics",
    "//base/request/request/download/dfx/event/fault",
  ]
  deps = [
    "//base/notification/distributed_notification_service/frameworks/ans:ans_innerkits",
    "//base/request/request/download/dfx:misc_request_dfx_static",
    "//base/telephony/core_service/interfaces/innerkits:tel_core_service_api",
    "//foundation/communication/netmanager_base/interfaces/innerkits/netconnclient:net_conn_manager_if",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//third_party/curl:curl",
  ]

  defines = [ "NO_SSL_CERTIFICATION=1" ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_base:zuri",
    "access_token:libaccesstoken_sdk",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "drivers_interface_ril:hril_innerkits",
    "eventhandler:libeventhandler",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
    "multimedia_image_standard:image_native",
    "os_account:os_account_innerkits",
    "relational_store:native_rdb",
  ]
  subsystem_name = "request"
  part_name = "request"
}
