# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("download_service_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "//third_party/curl/include",
    "//third_party/openssl/include",
  ]

  ldflags = [ "-Wl,--exclude-libs=ALL" ]
  cflags_cc = [ "-fexceptions" ]
  cflags = [ "-DOPENSSL_ARM64_PLATFORM" ]
  cflags += [
    "-fdata-sections",
    "-ffunction-sections",
    "-fvisibility=hidden",
  ]
}

ohos_shared_library("download_server") {
  sources = [
    "//base/request/request/download/interfaces/kits/js/napi/download_single/src/download_config.cpp",
    "//base/request/request/download/interfaces/kits/js/napi/download_single/src/download_info.cpp",
    "//base/request/request/upload/frameworks/libs/src/module_init.cpp",
    "src/application_state_observer.cpp",
    "src/download_background_notification.cpp",
    "src/download_notify_proxy.cpp",
    "src/download_service_ability.cpp",
    "src/download_service_manager.cpp",
    "src/download_service_stub.cpp",
    "src/download_service_task.cpp",
    "src/download_thread.cpp",
    "src/network_adapter.cpp",
  ]

  public_configs = [
    "//commonlibrary/c_utils/base:utils_config",
    ":download_service_config",
  ]
  include_dirs = [
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "//foundation/communication/netmanager_base/interfaces/innerkits/netconnclient/include",
    "//base/notification/distributed_notification_service/interfaces/inner_api",
    "//base/request/request/download/interfaces/innerkits/include",
    "//base/request/request/download/utils/include",
    "//base/telephony/core_service/interfaces/innerkits/include",
    "//third_party/json/include",
    "//base/request/request/download/interfaces/kits/js/napi/download_single/include",
    "//base/request/request/upload/frameworks/libs/include",
    "//third_party/curl/include",
    "//third_party/openssl/include",
    "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent/include",
    "//base/hiviewdfx/hitrace/interfaces/native/innerkits/include/hitrace_meter",
    "//base/request/request/download/dfx/dump",
    "//base/request/request/download/dfx/event/statistics",
    "//base/request/request/download/dfx/event/fault",
    "//foundation/distributeddatamgr/relational_store/interfaces/inner_api/rdb/include",
    "//foundation/distributeddatamgr/relational_store/interfaces/inner_api/appdatafwk/include",
    "//foundation/distributeddatamgr/relational_store/interfaces/inner_api/dataability/include",
  ]
  deps = [
    "//base/notification/distributed_notification_service/frameworks/ans:ans_innerkits",
    "//base/request/request/download/dfx:misc_request_dfx_static",
    "//base/telephony/core_service/interfaces/innerkits:tel_core_service_api",
    "//foundation/communication/netmanager_base/interfaces/innerkits/netconnclient:net_conn_manager_if",
    "//foundation/systemabilitymgr/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//third_party/curl:curl_shared",
    "//third_party/openssl:libcrypto_shared",
    "//third_party/openssl:libssl_shared",
  ]

  defines = [ "NO_SSL_CERTIFICATION=1" ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:app_manager",
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
  subsystem_name = "request"
  part_name = "request"
}
