# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/request/request/request_aafwk.gni")
import("//build/ohos.gni")

config("download_interfaces_kits_napi_config") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]

  cflags_cc = [ "-fno-exceptions" ]
  ldflags = [ "-Wl,--exclude-libs=ALL" ]
  cflags = [
    "-fdata-sections",
    "-ffunction-sections",
    "-fvisibility=hidden",
  ]
}

request_deps = [ "${request_path}/common:request_common_static" ]

ohos_shared_library("request_native") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  stack_protector_ret = true

  include_dirs = [
    "//third_party/node/src",
    "//utils/system/safwk/native/include",
    "./include",
    "${request_path}/frameworks/js/napi/include",
  ]
  configs = [ "//build/config/gcc:symbol_visibility_hidden" ]
  public_configs = [ ":download_interfaces_kits_napi_config" ]
  version_script = "libdownload_single.map"

  sources = [
    "src/parcel_helper.cpp",
    "src/request_manager.cpp",
    "src/request_service_proxy.cpp",
    "src/request_sync_load_callback.cpp",
  ]
  deps = request_deps
  external_deps = [
    "ability_base:zuri",
    "ability_runtime:abilitykit_native",
    "ability_runtime:data_ability_helper",
    "ability_runtime:napi_base_context",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "relational_store:native_dataability",
    "relational_store:native_rdb",
    "samgr:samgr_proxy",
  ]
  subsystem_name = "request"
  innerapi_tags = [ "platformsdk" ]
  part_name = "request"
}
